log
Mon Oct 19 13:37:38 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:63: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) calloc (5, sizeof(heapElem));ç
                                                               ^
heap.c:38:64: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) calloc (5, sizeof(heapElem));ç
                                                                ^
Compilation failed
Mon Oct 19 13:37:42 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:63: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) calloc (5, sizeof(heapElem));ç
                                                               ^
heap.c:38:64: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) calloc (5, sizeof(heapElem));ç
                                                                ^
Compilation failed
Mon Oct 19 13:38:00 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:63: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) calloc (4, sizeof(heapElem));ç
                                                               ^
heap.c:38:64: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) calloc (4, sizeof(heapElem));ç
                                                                ^
Compilation failed
Mon Oct 19 13:38:31 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:63: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) calloc (1, sizeof(heapElem));ç
                                                               ^
heap.c:38:64: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) calloc (1, sizeof(heapElem));ç
                                                                ^
Compilation failed
Mon Oct 19 13:39:48 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:60: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) malloc (sizeof(heapElem));ç
                                                            ^
heap.c:38:61: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) malloc (sizeof(heapElem));ç
                                                             ^
Compilation failed
Mon Oct 19 13:44:53 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 0/70
d572dd0
Mon Oct 19 13:45:09 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
a.out: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
a.out: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
 tests:  0|0
a.out: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
94d9f00
Mon Oct 19 13:48:20 UTC 2020: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
2aa3488
Mon Oct 19 13:52:41 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
1531bce
Mon Oct 19 13:54:01 UTC 2020: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
ae881f5
Mon Oct 19 17:04:44 UTC 2020: 
 heap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
7483f4c
Mon Oct 19 17:05:51 UTC 2020: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
b9ac647
Mon Oct 19 17:06:23 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
9f8b908
